--- a/dash/templates/dash/layouts/base_view_layout.html
+++ b/dash/templates/dash/layouts/base_view_layout.html
@@ -9,5 +9,5 @@
     <div id="{{ placeholder.html_id }}" class="placeholder {{ placeholder.html_class }}">
         {{ placeholder.render_for_view|safe }}
     </div>
-    {% endfor %}xdxd
+    {% endfor %}
 {% endblock content %}
