--- a/dash/contrib/plugins/url/templates/url/render.html
+++ b/dash/contrib/plugins/url/templates/url/render.html
@@ -1,10 +1,20 @@
-
-            <p>
-                <a href="{{ plugin.data.url }}" title="{{ plugin.data.title }}"{% if plugin.data.external %} target="_blank"{% endif %}>
+<div class="col s12">
+    <div class="stock card">
+        <div class="wrapper">
+            <div class="widget-wr">
+                <div class="row widget-title blue">
+                    <div class="col s12">
+                        <h4 class="flow-text">{{ plugin.data.title }}</h4>
+                    </div>
+                </div>
+                <a href="{{ plugin.data.url }}" title="{{ plugin.data.title }}"{% if plugin.data.external %}
+                   target="_blank"{% endif %}>
                     {% if plugin.data.image %}
-                    <i class="iconic {{ plugin.data.image }}"></i>
-                    {% else %}
-                    {{ plugin.data.title }}
+                        <i class="material-icons">{{ plugin.data.image }}</i>
                     {% endif %}
+                    {{ plugin.data.title }}
                 </a>
-            </p>
+            </div>
+        </div>
+    </div>
+</div>
