--- a/skyfolk/templates/services/services.html
+++ b/skyfolk/templates/services/services.html
@@ -2,66 +2,94 @@
 {% load static %}
 {% load i18n %}
 {% load django_th_extras %}
-{% block title %}{% trans "My Activated Services" %} - {{ user.username }}{% endblock %}
 {% block filter_trigger %}
 {% endblock %}
 {% block content %}
-    <div class="col-md-12">
-        {% if user.is_authenticated %}
-            <h2>My Services</h2>
-            {% if messages %}
-            <div class="alert alert-success" role="alert">
-                <ul class="messages">
-                    {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                </ul>
-            </div>
-            {% endif %}
-            {% if services_list %}
-                <div class="row">
-                    <h3>Services activated</h3>
-                    {% for service in services_list %}
-                    <div class="col-md-3">
-                        <div class="thumbnail">
-                            <div class="caption">
-                                <h4 data-toggle="tooltip" title="{{ service.name.description }}">{{ service.name|service_readable|safe|escape }} <i class="fa fa-{{ service.name|service_readable_class|lower }}" aria-hidden="true"></i></h4>
-                                <p>
-                                    {% if service.name.auth_required == True %}
-                                        <a class="btn btn-xs btn-warning" role="button" href="{% url 'renew_service' service.name.id %}" title="{% trans 'Renew this service ?' %}"><span class="glyphicon glyphicon-repeat icon-white"></span></a>
-                                    {% endif %}
-                                    <a class="btn btn-xs btn-info" role="button" href="{% url 'edit_service' service.id %}" title="{% trans 'Edit this service' %}"><span class="glyphicon glyphicon-pencil icon-white"></span></a>
-                                    <a class="btn btn-xs btn-success" role="button" href="{% url 'service_related_triggers_switch_to' service.pk 'off' %}" title="{% trans 'Disable all the triggers of this service' %}"><span class="glyphicon glyphicon-off icon-white"></span></a>
-                                    <a class="btn btn-xs btn-info" role="button" href="{% url 'service_related_triggers_switch_to' service.pk 'on' %}" title="{% trans 'Enable all the triggers of this service' %}"><span class="glyphicon glyphicon-off icon-white"></span></a>
-                                    <a class="btn btn-xs btn-danger" role="button" href="{% url 'delete_service' service.id %}" title="{% trans 'Delete this service ?' %}"><span class="glyphicon glyphicon-trash icon-white"></span></a>
-                                    <br>
-                                    <span class="badge">{{ service.counter_ok }}</span> {%  trans "ran successfully" %} - <span class="badge">{{ service.counter_ko }}</span> {%  trans "failed" %}
-                                </p>
-                            </div>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                {% if user.is_authenticated %}
+                    <h2>My Services</h2>
+                    {% if messages %}
+                        <div class="alert alert-success" role="alert">
+                            <ul class="messages">
+                                {% for message in messages %}
+                                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
                         </div>
-                    </div>
-                    {% endfor %}
-                </div>
-            {% endif %}
-            {% if service_list_remaining %}
-                <div class="row">
-                    <h3>Services available</h3>
-                    {% for service in service_list_remaining %}
-                    <div class="col-md-3">
-                        <a class="thumbnail" title="add this service" href="{% url 'add_service' service.name %}">
-                            <h4 data-toggle="tooltip" title="{{ service.description }}">{{ service|service_readable|safe|escape }} <i class="fa fa-{{ service|service_readable_class|lower }}" aria-hidden="true"></i></h4>
-                            <p>
-                                <span class="glyphicon glyphicon-repeat icon-white"></span>
-                                <span class="glyphicon glyphicon-pencil icon-white"></span>
-                                <span class="glyphicon glyphicon-off icon-white"></span>
-                                <span class="glyphicon glyphicon-off icon-white"></span>
-                                <span class="glyphicon glyphicon-trash icon-white"></span>
-                            </p>
-                        </a>
-                    </div>
-                    {% endfor %}
-                </div>
-            {% endif %}
-        {% endif %}
+                    {% endif %}
+                    {% if services_list %}
+                        <div class="row">
+                            <h3>Services activated</h3>
+                            {% for service in services_list %}
+                                <div class="col m4 card z-depth-2">
+                                    <div class="thumbnail">
+                                        <div class="caption">
+                                            <h4 data-toggle="tooltip" title="{{ service.name.description }}">
+                                                {{ service.name|service_readable|safe|escape }} <i
+                                                    class="fa fa-{{ service.name|service_readable_class|lower }}"
+                                                    aria-hidden="true"></i></h4>
+                                            <p>
+                                                {% if service.name.auth_required == True %}
+                                                    <a class="btn btn-xs btn-warning" role="button"
+                                                       href="{% url 'renew_service' service.name.id %}"
+                                                       title="{% trans 'Renew this service ?' %}"><span
+                                                            class="material-icons">autorenew</span></a>
+                                                {% endif %}
+                                                <a class="btn btn-xs btn-info" role="button"
+                                                   href="{% url 'edit_service' service.id %}"
+                                                   title="{% trans 'Edit this service' %}"><span
+                                                        class="material-icons">edit</span></a>
+                                                <a class="btn btn-xs btn-success" role="button"
+                                                   href="{% url 'service_related_triggers_switch_to' service.pk 'off' %}"
+                                                   title="{% trans 'Disable all the triggers of this service' %}"><span
+                                                        class="material-icons">pause_circle_filled</span></a>
+                                                <a class="btn btn-xs btn-info" role="button"
+                                                   href="{% url 'service_related_triggers_switch_to' service.pk 'on' %}"
+                                                   title="{% trans 'Enable all the triggers of this service' %}"><span
+                                                        class="material-icons">play_circle_filled</span></a>
+                                                <a class="btn btn-xs btn-danger" role="button"
+                                                   href="{% url 'delete_service' service.id %}"
+                                                   title="{% trans 'Delete this service ?' %}"><span
+                                                        class="material-icons">remove</span></a>
+                                                <br>
+                                                <span class="x">{{ service.counter_ok }}</span> {% trans "ran successfully" %}
+                                                -
+                                                <span class="x">{{ service.counter_ko }}</span> {% trans "failed" %}
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                    {% if service_list_remaining %}
+                        <div class="row">
+                            <h3>Services available</h3>
+                            {% for service in service_list_remaining %}
+                                <div class="col m3 card">
+                                    <a class="thumbnail" title="add this service"
+                                       href="{% url 'add_service' service.name %}">
+                                        <h4 data-toggle="tooltip" title="{{ service.description }}">
+                                            {{ service|service_readable|safe|escape }} <i
+                                                class="fa fa-{{ service|service_readable_class|lower }}"
+                                                aria-hidden="true"></i>
+                                        </h4>
+                                        <p>
+                                            <span class="glyphicon glyphicon-repeat icon-white"></span>
+                                            <span class="glyphicon glyphicon-pencil icon-white"></span>
+                                            <span class="glyphicon glyphicon-off icon-white"></span>
+                                            <span class="glyphicon glyphicon-off icon-white"></span>
+                                            <span class="glyphicon glyphicon-trash icon-white"></span>
+                                        </p>
+                                    </a>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endif %}
+            </div>
+        </div>
     </div>
 {% endblock %}
