--- a/dash/contrib/plugins/poll/templates/poll/render.html
+++ b/dash/contrib/plugins/poll/templates/poll/render.html
@@ -1,15 +1,53 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
 <div class="col s12">
-	<div class="stock card">
-		<div class="wrapper">
-			<div class="widget-wr">
-				<div class="row widget-title blue">
-					<div class="col s12">
-						<h4 class="flow-text">{{ plugin.data.title }}</h4>
-					</div>
-				</div>
-				{{ plugin.data.description }}
-				{{ plugin.data.poll }}
-			</div>
-		</div>
-	</div>
+    <div class="stock card">
+        <div class="wrapper">
+            <div class="widget-wr">
+                <div class="row widget-title blue">
+                    <div class="col s12">
+                        <h4 class="flow-text">{{ plugin.data.title }}</h4>
+                    </div>
+                </div>
+                {{ plugin.data.description }}
+                <form action="{% url "dash.response_dashboard_entry" %}" method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Sí" name="_positive"/> {{ responses.si }}
+                    <input type="submit" value="No" name="_negative"/> {{ responses.no }}
+                    <canvas id="myChart" width="400" height="400"></canvas>
+                    <script>
+                        var ctx = document.getElementById("myChart").getContext('2d');
+                        var myChart = new Chart(ctx, {
+                            type: 'bar',
+                            data: {
+                                labels: ["No", "Si"],
+                                datasets: [{
+                                    label: 'Resultados',
+                                    data: [{{ responses.no }}, {{ responses.si }}],
+                                    backgroundColor: [
+                                        'rgba(255, 99, 132, 0.2)',
+                                        'rgba(54, 162, 235, 0.2)',
+                                    ],
+                                    borderColor: [
+                                        'rgba(255,99,132,1)',
+                                        'rgba(54, 162, 235, 1)',
+                                    ],
+                                    borderWidth: 1
+                                }]
+                            },
+                            options: {
+                                scales: {
+                                    yAxes: [{
+                                        ticks: {
+                                            beginAtZero: true
+                                        }
+                                    }]
+                                }
+                            }
+                        });
+                    </script>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
