--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -38,6 +38,9 @@ Template para el perfil de cada usuario
         <script src="{% static "js/profile.js" %}" type="text/javascript"></script>
         <script src="{% static "js/jquery.easytabs.js" %}" type="text/javascript"></script>
         <script src="{% static "js/jquery.hashchange.min.js" %}" type="text/javascript"></script>
+        {% for script in js %}
+            <script src="{% static script %}" type="text/javascript"></script>
+        {% endfor %}
     {% endcompress %}
     <div class="container">
         {% if user_profile.is_active %}
