--- a/dash/templates/dash/_base.html
+++ b/dash/templates/dash/_base.html
@@ -45,12 +45,6 @@
         <div class="menu-wrapper">
             {% block top-nav-menu-wrapper %}
             <ul class="menu nav">
-                <li class="menu-item">
-                    <a href="{% url 'dash.dashboard' %}" class="menu-dashboard-home" title="{% trans 'Dashboard' %}">
-                        <span class="iconic icon-home icon-2x"></span>
-                    </a>
-                </li>
-
                 {% if edit_mode %}
                 <li class="menu-item">
                     <a href="{% if current_workspace %}{% url 'dash.dashboard' current_workspace.slug %}{% else %}{% url 'dash.dashboard' %}{% endif %}" class="menu-dashboard-home" title="{% trans 'View dashboard' %}">
@@ -81,14 +75,14 @@
                         </li>
                         {% endif %}
 
-                        {% if 'dash.change_dashboardsettings' in perms %}
+                        {% comment %}{% if 'dash.change_dashboardsettings' in perms %}
                         <li class="sub-menu-item">
                             <a href="{% url 'dash.edit_dashboard_settings' %}" class="menu-dashboard-edit-settings" title="{% trans 'Dashboard settings' %}">
                                 <span class="iconic icon-gears"></span>
                                 <span class="textonic">{% trans "Dashboard settings" %}</span>
                             </a>
                         </li>
-                        {% endif %}
+                        {% endif %}{% endcomment %}
 
                         {% if current_workspace %}
                             {% if 'dash.change_dashboardworkspace' in perms %}
@@ -156,11 +150,6 @@
 
             {% if workspaces %}
             <ul class="workspaces">
-                <li class="menu-item{% if not current_workspace %} active{% endif %}">
-                    <a href="{% if edit_mode %}{% url 'dash.edit_dashboard' %}{% else %}{% url 'dash.dashboard' %}{% endif %}" title="{% trans 'Default' %}">
-                        <span class="iconic {% if not current_workspace %}icon-circle{% else %}icon-circle-blank{% endif %}"></span>
-                    </a>
-                </li>
                 {% for ws in workspaces %}
                 <li class="menu-item{% if ws == current_workspace %} active{% endif %}">
                     <a href="{% if edit_mode %}{% url 'dash.edit_dashboard' ws.slug %}{% else %}{% url 'dash.dashboard' ws.slug %}{% endif %}" title="{{ ws.name }}">
