--- a/skyfolk/static/sass/dashboard.sass
+++ b/skyfolk/static/sass/dashboard.sass
@@ -1,2 +1,27 @@
 .dashboard_menu > li
   display: inline-block
+
+.card
+  padding: 10px
+  background: white
+  border-radius: 0.3rem
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
+  margin-bottom: 1em
+  word-wrap: break-word
+
+.ventana-pin
+  width: 100%
+  height: 30px
+  line-height: 30px
+  display: block
+  border-radius: 3px
+  clear: both
+
+.ventana-pin a
+  float: right
+  font-size: 17px
+  margin-right: 14px
+  text-decoration: none
+  color: white
+  &:hover
+    opacity: 0.8
