--- a/dash/contrib/plugins/service/templates/service/render.html
+++ b/dash/contrib/plugins/service/templates/service/render.html
@@ -1,23 +1,33 @@
 <div class="col s12">
-	<div class="stock card">
-		<div class="wrapper">
-			<div class="widget-wr">
-				<div class="row widget-title blue">
-					<div class="col s12">
-						<h4 class="flow-text">{{ plugin.data.description }}</h4>
-					</div>
-				</div>					
-				{% for item in results %}
-					<div class="row widget-item">
-						<div class="row">
-							<h5>{{ item.title }}</h5>
-						</div>
-						<div class="row">
-							<p>{{ item.content }}</p>
-						</div>
-					</div>
-				{% endfor %}
-			</div>
-		</div>
-	</div>
+    <div class="stock card">
+        <div class="wrapper">
+            <div class="widget-wr">
+                <div class="row widget-title blue">
+                    <div class="col s12">
+                        <h4 class="flow-text">{{ plugin.data.description }}</h4>
+                    </div>
+                </div>
+                {% for item in results %}
+                    <div class="row widget-item">
+                        <div class="row">
+                            <h5>{{ item.title }}</h5>
+                        </div>
+                        <div class="row">
+                            <p>{{ item.content }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="row">
+                    <p class="green-text" title="Se ejecutó correctamente">
+                        <span class="material-icons">done</span>
+                        <span>{{ trigger.counter_ok }}</span>
+                    </p>
+                    <p class="red-text" title="Hay un error con los servicios asociado a este widget">
+                        <span class="material-icons">error</span>
+                        <span>{{ trigger.counter_ko }}</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
