--- a/dash/templates/dash/base.html
+++ b/dash/templates/dash/base.html
@@ -4,11 +4,12 @@
     {% block stylesheets %}
         <link href="{% static 'colorbox/colorbox.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'css/dashboard.css' %}" rel="stylesheet" type="text/css">
-        {% if css %}
+        {% comment %}{% if css %}
+            {{ css }}
             <style type="text/css">
                 {{ css|safe }}
             </style>
-        {% endif %}
+        {% endif %}{% endcomment %}
     {% endblock stylesheets %}
 
     {% block extra-stylesheets %}
@@ -39,7 +40,7 @@
                             </li>
                         {% else %}
                             {% has_edit_dashboard_permissions as has_edit_dashboard_permissions %}
-                            {% if has_edit_dashboard_permissions %}
+                            {% if has_edit_dashboard_permissions and current_workspace %}
                                 <li class="menu-item">
                                     <a href="{% if current_workspace %}{% url 'dash.edit_dashboard' current_workspace.slug %}{% endif %}"
                                        class="waffes-effect waves-light btn white black-text"
@@ -108,13 +109,17 @@
                 <div class="container">
                     <div class="row">
                         <div class="col s12">
-                            <div class="center">
+                            <div>
                                 {% for ws in workspaces %}
                                     <div class="col s3">
-                                        <div class="card z-depth-1">
+                                        <div class="card {% if ws == current_workspace %}grey lighten-1{% endif %}">
                                             <a href="{% if edit_mode %}{% url 'dash.edit_dashboard' ws.slug %}{% else %}{% url 'dash.dashboard' ws.slug %}{% endif %}"
                                            title="Workspace {{ ws.name }}">
-                                            {{ ws.name }} - {{ ws.layout_uid }}
+                                            <p class="flow-text">
+                                                <span class="material-icons">dashboard</span>
+                                                <span>{{ ws.name }}</span> -
+                                                <span>{{ ws.layout_uid }}</span>
+                                            </p>
                                         </a>
                                         </div>
                                     </div>
