--- a/dash/templates/dash/layouts/base_placeholder_view.html
+++ b/dash/templates/dash/layouts/base_placeholder_view.html
@@ -4,7 +4,9 @@
     {% get_dash_plugin entry as plugin %}
         <div id="{{ plugin.html_id }}" class="plugin {{ plugin.html_class }}">
             <div class="plugin-content-wrapper">
-                {{ plugin.render }}
+                {% with plugin.render as rendered %}
+                    {% if rendered %}{{ rendered }}{% endif %}
+                {% endwith %}
             </div>
         </div>
 {% endfor %}
