--- a/dash/templates/dash/layouts/base_view_layout.html
+++ b/dash/templates/dash/layouts/base_view_layout.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
             {% for placeholder in placeholders %}
-                <div id="{{ placeholder.html_id }}" class="col s12 {{ placeholder.html_class }}">
+                <div id="{{ placeholder.html_id }}" class="placeholder {{ placeholder.html_class }}">
                     {{ placeholder.render_for_view|safe }}
                 </div>
             {% endfor %}
