--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -27,6 +27,7 @@
     <li><a href="{% url "user_profile:config_profile" %}"><i class="material-icons">settings</i>Configuración</a></li>
     <li><a href="/messages/inbox/"><i class="material-icons">email</i>Mensajes privados</a></li>
     <li><a href="{% url "dash.dashboard_workspaces" %}"><i class="material-icons">dashboard</i>Workspaces</a></li>
+    <li><a href="{% url "user_services" %}"><i class="material-icons">room_service</i>Servicios</a></li>
     <li><a id="new_group"><i class="material-icons">people</i>Crear grupo</a></li>
     <li>
         <div class="divider"></div>
