+ Mejora dashboard plugin

--- a/dash/contrib/plugins/url/templates/url/render.html
+++ b/dash/contrib/plugins/url/templates/url/render.html
@@ -2,7 +2,7 @@
     <div class="stock card">
         <div class="wrapper">
             <div class="widget-wr">
-                <div class="row widget-title blue">
+                <div class="row widget-title blue white-text">
                     <div class="col s12">
                         <h4 class="flow-text">{{ plugin.data.title }}</h4>
                     </div>
