--- a/dash/templates/dash/add_dashboard_entry_ajax.html
+++ b/dash/templates/dash/add_dashboard_entry_ajax.html
@@ -1,37 +1,42 @@
 {% load i18n %}
-<div class="generic-content-wrapper">
-    <div class="wrapper-bg"></div>
-    <div class="hero-unit-small">
-        <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Add {{ plugin_name }} to
-            Dashboard{% endblocktrans %}</h2>
-    </div>
+<div class="container">
+    <div class="row">
+        <div class="col s12">
+            <div class="wrapper-bg"></div>
+            <div class="hero-unit-small">
+                <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Add {{ plugin_name }} to
+                    Dashboard{% endblocktrans %}</h2>
+            </div>
+        </div>
+        <div class="col s12">
+            {% if user_services and user_services < 2 %}
+                <p>¡Necesitas al menos dos servicios activos para crear un trigger!</p>
+                <p><a href="{% url 'user_services' %}">Activar servicios</a></p>
+            {% else %}
+                <form method="post" action="{{ request.path }}" enctype="multipart/form-data"
+                      class="form-horizontal">{% csrf_token %}
+                    {{ wizard.management_form }}
+                    {% if wizard.form.forms %}
+                        {{ wizard.form.management_form }}
+                        {% for form in wizard.form.forms %}
+                            {{ form }}
+                        {% endfor %}
+                    {% else %}
+                        {{ wizard.form }}
+                    {% endif %}
 
-    <div class="content-body">
-        {% if user_services and user_services < 2 %}
-            <p>¡Necesitas al menos dos servicios activos para crear un trigger!</p>
-            <p><a href="{% url 'user_services' %}">Activar servicios</a></p>
-        {% else %}
-            <form method="post" action="{{ request.path }}" enctype="multipart/form-data"
-                  class="form-horizontal">{% csrf_token %}
-                {{ wizard.management_form }}
-                {% if wizard.form.forms %}
-                    {{ wizard.form.management_form }}
-                    {% for form in wizard.form.forms %}
-                        {{ form }}
-                    {% endfor %}
-                {% else %}
-                    {{ wizard.form }}
-                {% endif %}
-
-                {% if wizard.steps.prev %}
-                    <button name="wizard_goto_step" type="submit"
-                            value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
-                    <button name="wizard_goto_step" type="submit"
-                            value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
-                {% endif %}
-                <input type="submit" value="{% trans "submit" %}"/>
-                {% include "dash/snippets/plugin_help_text.html" %}
-            </form>
-        {% endif %}
+                    {% if wizard.steps.prev %}
+                        <button name="wizard_goto_step" type="submit"
+                                class="btn"
+                                value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
+                        <button name="wizard_goto_step" type="submit"
+                                class="btn"
+                                value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
+                    {% endif %}
+                    <input clsas="btn" type="submit" value="{% trans "submit" %}"/>
+                    {% include "dash/snippets/plugin_help_text.html" %}
+                </form>
+            {% endif %}
+        </div>
     </div>
 </div>
