--- a/skyfolk/static/css/dashboard.css
+++ b/skyfolk/static/css/dashboard.css
@@ -26,4 +26,8 @@
   .ventana-pin a:hover {
     opacity: 0.8; }
 
+.plugin-content-wrapper img {
+  width: 100%;
+  height: 100%; }
+
 /*# sourceMappingURL=dashboard.css.map */
